# bitcoin-education

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_VERIFICATION_REPORT.md  MASTERPLAN.md  PLAN-clean-moderator-content.md  README.md  opencode.json  prompt.txt  pyproject.toml  run.sh  status.md
.claude/: settings.json  settings.local.json
btcedu/: cli.py  config.py  db.py
deploy/: Caddyfile.dashboard  README.md  btcedu-run.service  btcedu-web.service  setup-web.sh
docs/: ARCHITECTURE.md  CONSTRAINTS_TABLE.md  PROCESS_ALL_MULTI_CHANNEL.md  PROGRESS_LOG.md  SERVER_DEPLOYMENT_GUIDE.md  SETUP_GUIDE.md  UEBERSICHT.md  runtime_model_comparison.json
scripts/: migrate_channels.py
tests/: CLAUDE.md  conftest.py  test_adapter.py  test_analytics.py  test_anchor_generator.py  test_anchor_service.py  test_assemble_reviewed.py  test_chapter_schema.py  test_chapterizer.py  test_chunker.py  test_config.py  test_corrector.py  test_cross_profile.py  test_dead_letter.py  test_detector.py  test_diff_item_ids.py  test_elevenlabs_service.py  test_ffmpeg_frame_extraction.py  test_ffmpeg_service.py  test_ffmpeg_smoke.py  test_finalize_video.py  test_frame_editor.py  test_frame_extraction_service.py  test_frame_extractor.py  test_gemini_image_service.py  test_generator.py  test_image_generator.py  test_intent_extract_registry.py  test_journal.py  test_llm_introspection.py  test_migrations.py  test_models.py  test_moderator_patterns.py  test_path_security.py  test_pexels_service.py  test_phase2_remaining.py  test_pipeline.py  test_profiles.py  (+29 more)
(+239 files in other folders)
