[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcoin-education"
version = "0.1.0"
description = "Automated pipeline: German Bitcoin podcast → Turkish educational content"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",

    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "feedparser>=6.0.0",
    "yt-dlp>=2024.0.0",
    "pydub>=0.25.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
web = [
    "flask>=3.0.0",
    "gunicorn>=22.0.0",
]
youtube = [
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "flask>=3.0.0",
]

[project.scripts]
btcedu = "btcedu.cli:cli"

[tool.setuptools.packages.find]
include = ["btcedu*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = [
    "UP042",  # Keep str,Enum pattern for Python 3.12 compatibility
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
